Text update & added Instagram.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</head>
 	<body>
 		<h1>🔗 Places you can find me</h1>
-		<p>You're looking at version 0.1 of this website, so bare with me. This is as much a colleciton of links to social profiles for me as it is for others trying to find me. Some links in no particular order:</p>
+		<p>You're looking at version 0.1 of this website, please bare with me. This is a collection of links to places you can find me online. Some links in no particular order:</p>
 		<ul>
 			<li>
 				<a href="https://wenzels.website/">Website</a>
@@ -37,6 +37,7 @@
 			<li>
 				<a href="http://codepen.io/stairjoke/">Codepen</a>
 			</li>
+			<li><a href="https://www.instagram.com/stairjoke/">Instagram</a></li>
 		</ul>
 	</body>
 </html>
